gitops/clusters/apse2/local/http-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-test
  labels:
    istio-injection: enabled
