gitops/clusters/apse2/local/http-test/rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-test

  template:
    metadata:
      labels:
        app: http-test
    spec:
      containers:
        - name: http
          image: hashicorp/http-echo
          args:
            - "-text=hello-next-version-1"

  strategy:
    canary:
      stableService: http-test-stable
      canaryService: http-test-canary
      trafficRouting:
        istio:
          virtualService:
            name: http-test
            routes:
              - primaryRoute
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 100
