gitops/clusters/apse2/local/http-test/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: http-test
  namespace: mesh-test

spec:
  host: http-test

  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http-test
  namespace: mesh-test
spec:
  hosts:
    - http-test

  http:
    - route:
        - destination:
            host: http-test
            subset: v1
          weight: 80

        - destination:
            host: http-test
            subset: v2
          weight: 20
